# pptxforgekit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  chart_reference.md  cli_reference.md  extending_with_llm.md  slide_schema_spec.md  theme_spec.md
examples/: run_example.sh
examples/expected_output/: slides_schema.json
examples/input_docs/: comparison.csv  experiment_results.csv  measurements.xlsx  research_paper.md  timeseries.csv
examples/schemas/: sample_chart_extended.json  sample_chart_slide.json  sample_image_slide.json  sample_text_slide.json
examples/themes/: academic.yaml  default.yaml
src/pptxforgekit/: cli.py  exceptions.py
src/pptxforgekit/analyzer/: csv_parser.py  document.py  markdown_parser.py  xlsx_parser.py
src/pptxforgekit/assets/: manager.py
src/pptxforgekit/chart/: builder.py  loader.py  recommender.py  validator.py
src/pptxforgekit/exporter/: export.py
src/pptxforgekit/fixer/: auto.py  ops.py  result.py
src/pptxforgekit/interfaces/: analyzer.py  generator.py  planner.py
src/pptxforgekit/llm/: analyzer.py  generator.py  planner.py  provider.py  registry.py
src/pptxforgekit/models/: review.py  schema.py
src/pptxforgekit/planner/: storyline.py
src/pptxforgekit/renderer/: layout_engine.py  pptx.py
src/pptxforgekit/reviewer/: slide.py
src/pptxforgekit/schema/: generator.py
src/pptxforgekit/theme/: loader.py
src/presentation_tool/: cli.py  exceptions.py
src/presentation_tool/analyzer/: csv_parser.py  document.py  markdown_parser.py  xlsx_parser.py
src/presentation_tool/assets/: manager.py
src/presentation_tool/chart/: builder.py  loader.py  recommender.py  validator.py
src/presentation_tool/exporter/: export.py
src/presentation_tool/fixer/: auto.py  ops.py  result.py
tests/: conftest.py
tests/fixtures/docs/: sample.csv  (+2 more)
tests/test_analyzer/: test_document.py
tests/test_chart/: test_builder.py  test_loader.py  test_recommender.py  test_validator.py
tests/test_exporter/: test_export.py
tests/test_fixer/: test_auto.py
tests/test_planner/: test_storyline.py
tests/test_renderer/: test_pptx.py
tests/test_reviewer/: conftest.py  test_chart_review.py  test_data_check.py  test_image.py  test_layout.py  test_report.py  test_text.py  test_theme_check.py
tests/test_schema/: test_generator.py  test_validation.py
tests/test_theme/: test_loader.py
(+42 files in other folders)
